[package]
name = "sanctum-solana-serde"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "^1"
bs58 = "^0.5.0"
data-encoding = "^2.5.0"
derive_more = { version = "^0.99", default-features = false, features = [
  "as_mut",
  "as_ref",
  "deref",
  "deref_mut",
  "from",
  "into",
  "into_iterator",
] }
rust_decimal = "^1.0"
serde = "^1"
solana-program = "*"
solana-sdk = "*"
utoipa = { version = "^4", optional = true }
