[package]
name = "sanctum-solana-serde"
version = "1.0.0"
edition = "2021"
authors = ["sanctum"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/igneous-labs/sanctum-solana-serde.git"
readme = "README.md"
keywords = ["solana", "serde"]
categories = ["Web programming", "HTTP client", "HTTP server"]

[dependencies]
bincode = "^1"
bs58 = "*"           # using 0.5.0 for development
data-encoding = "^2"
# into_iterator introduced in 0.99
derive_more = { version = ">=0.99", default-features = false, features = [
  "as_mut",
  "as_ref",
  "deref",
  "deref_mut",
  "from",
  "into",
  "into_iterator",
] }
rust_decimal = "^1"
serde = "^1"
solana-program = "*"
solana-sdk = "*"
utoipa = { version = "^4", optional = true }
